tests/errors/frontend/syntax/overflow.fpcore
(FPCore (x)
 (! :precision (fixed 0 18446744073709551616)
   (cast x)))
